Fix stretch

--- a/static/scripts/style.css
+++ b/static/scripts/style.css
@@ -52,7 +52,6 @@ header, section {
 	flex: 1;
 	column-gap: 2rem;
 	padding: 1rem 0rem;
-	justify-content: stretch;
 }
 
 .center_y {
